--- a/styles/src/all.scss
+++ b/styles/src/all.scss
@@ -1,7 +1,7 @@
 @import
-"../../../node_modules/bootstrap/scss/functions",
-"../../../node_modules/bootstrap/scss/variables",
-"../../../node_modules/bootstrap/scss/variables-dark",
+"../../node_modules/bootstrap/scss/functions",
+"../../node_modules/bootstrap/scss/variables",
+"../../node_modules/bootstrap/scss/variables-dark",
 "align.scss",
 "background.scss",
 "decoration.scss",
@@ -10,9 +10,9 @@
 "spacing.scss",
 "text-color.scss",
 "effects.scss",
-"../../../node_modules/bootstrap/scss/maps",
-"../../../node_modules/bootstrap/scss/mixins",
-"../../../node_modules/bootstrap/scss/root",
-"../../../node_modules/bootstrap/scss/utilities",
+"../../node_modules/bootstrap/scss/maps",
+"../../node_modules/bootstrap/scss/mixins",
+"../../node_modules/bootstrap/scss/root",
+"../../node_modules/bootstrap/scss/utilities",
 "sizing.scss",
-"../../../node_modules/bootstrap/scss/bootstrap";
+"../../node_modules/bootstrap/scss/bootstrap";
