--- a/styles/src/font.scss
+++ b/styles/src/font.scss
@@ -1,4 +1,4 @@
-$path: "https://github.com/integratize/integratize.github.io/raw/main/fonts/open-sans/woff2";
+$path: "/fonts/open-sans";
 @font-face {
   font-family: "font_light";
   font-weight: 300;
