--- a/styles/src/text-color.scss
+++ b/styles/src/text-color.scss
@@ -28,7 +28,7 @@ $placeholder: #A1A1A1;
 }
 .text-master,
 .link-master:hover {
-  color: #613583 !important;
+  color: #4A277E !important;
 }
 .text-second {
   color: #F4813F !important;
