--- a/styles/src/text-color.scss
+++ b/styles/src/text-color.scss
@@ -21,7 +21,7 @@ $placeholder: #A1A1A1;
   color: transparent;
 }
 .text-regular {
-  color: #191A20 !important;
+  color: #675C79 !important;
 }
 .text-medium {
   color: #E5E4DD !important;
