--- a/styles/src/background.scss
+++ b/styles/src/background.scss
@@ -9,8 +9,9 @@ $danger: #731A4E;
 $master: #513D7D;
 $custom-colors: (
   "master": $master,
+  "medium": #F0F2F5,
   "regular": #3D3846,
-  "medium": #F0F2F5
+  "tertiary": #675c79
 );
 $theme-colors: (
   "primary":    $primary,
