--- a/styles/src/all.scss
+++ b/styles/src/all.scss
@@ -15,4 +15,5 @@
 "../../node_modules/bootstrap/scss/root",
 "../../node_modules/bootstrap/scss/utilities",
 "sizing.scss",
+"border-color.scss",
 "../../node_modules/bootstrap/scss/bootstrap";
