--- a/styles/src/all.scss
+++ b/styles/src/all.scss
@@ -4,7 +4,6 @@
 "../../node_modules/bootstrap/scss/variables-dark",
 "align.scss",
 "background.scss",
-"border-color.scss",
 "decoration.scss",
 "display.scss",
 "font.scss",
@@ -17,3 +16,6 @@
 "../../node_modules/bootstrap/scss/utilities",
 "sizing.scss",
 "../../node_modules/bootstrap/scss/bootstrap";
+.is-invalid {
+  border-color: #DC3545 !important;
+}
