--- a/styles/src/decoration.scss
+++ b/styles/src/decoration.scss
@@ -25,3 +25,6 @@ nav a,
 .decoration-underline:focus {
   text-decoration: underline !important;
 }
+.accordion-button:focus {
+  border-color: rgba(0, 0, 0, .125);
+}
