--- a/styles/src/all.scss
+++ b/styles/src/all.scss
@@ -16,3 +16,6 @@
 "../../node_modules/bootstrap/scss/utilities",
 "sizing.scss",
 "../../node_modules/bootstrap/scss/bootstrap";
+.border-secondary-2 {
+  border-color: #B2ADBB;
+}
