--- a/styles/src/decoration.scss
+++ b/styles/src/decoration.scss
@@ -25,6 +25,9 @@ nav a,
 .decoration-underline:focus {
   text-decoration: underline !important;
 }
+.form-control {
+  border-color: #B2ADBB;
+}
 .accordion-button:focus {
   border-color: rgba(0, 0, 0, .125);
 }
