--- a/styles/src/background.scss
+++ b/styles/src/background.scss
@@ -8,6 +8,7 @@ $info: #0D6EFD;
 $warning: #D1872E;
 $danger: #731A4E;
 $master: #513D7D;
+$input-border-color: #B2ADBB;
 $custom-colors: (
   "master": $master,
   "medium": #F0F2F5,
